<?xml version="1.0"?>
<package>
  <name>force_guiding</name>
  <version>0.0.0</version>
  <description>The force_guiding package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="llach@techfak.uni-bielefeld.de">llach</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>force_guiding_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>force_guiding_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
